---
source: crates/pcb-zen/tests/input.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
  )
  (libparts
  )
  (nets
    (net (code "1") (name "PDM_clock")
    )
    (net (code "2") (name "PDM_data")
    )
    (net (code "3") (name "PDM_power")
    )
    (net (code "4") (name "PDM_select")
    )
  )
)
Warning: [unused] io() 'pdm' in module 'sub' is not connected to any ports
  at [TEMP_DIR]sub.zen

Advice: [net] Net name 'pdm_power' should be UPPERCASE: 'PDM_POWER'
  at [TEMP_DIR]sub.zen
  in [TEMP_DIR]top.zen:7:1-29: Issue in `sub`

Advice: [net] Net name 'pdm_data' should be UPPERCASE: 'PDM_DATA'
  at [TEMP_DIR]sub.zen
  in [TEMP_DIR]top.zen:7:1-29: Issue in `sub`

Advice: [net] Net name 'pdm_select' should be UPPERCASE: 'PDM_SELECT'
  at [TEMP_DIR]sub.zen
  in [TEMP_DIR]top.zen:7:1-29: Issue in `sub`

Advice: [net] Net name 'pdm_clock' should be UPPERCASE: 'PDM_CLOCK'
  at [TEMP_DIR]sub.zen
  in [TEMP_DIR]top.zen:7:1-29: Issue in `sub`

Advice: io() parameter 'pdm' should be UPPERCASE: 'PDM'
   ╭─[ [TEMP_DIR]sub.zen:5:7 ]
 5 │pdm = io("pdm", PdmMic)
   │              ╰───────── io() parameter 'pdm' should be UPPERCASE: 'PDM'
   ├─[ [TEMP_DIR]top.zen:7:1 ]
 7 │Sub(name = "sub", pdm = pdm)
   │              ╰────────────── Issue in `sub`

Advice: [net] Net name 'PDM_power' should be UPPERCASE: 'PDM_POWER'
  at [TEMP_DIR]top.zen

Advice: [net] Net name 'PDM_data' should be UPPERCASE: 'PDM_DATA'
  at [TEMP_DIR]top.zen

Advice: [net] Net name 'PDM_select' should be UPPERCASE: 'PDM_SELECT'
  at [TEMP_DIR]top.zen

Advice: [net] Net name 'PDM_clock' should be UPPERCASE: 'PDM_CLOCK'
  at [TEMP_DIR]top.zen
